@startuml
Lead  --right--> "0..*" Cursado
Cursado *--> "1..*" DetalleCursado
Cursado --> "1..*" Carrera
DetalleCursado -left-> "1" Estado
DetalleCursado --right--> "1" Materia
Carrera *--> "1..*" Materia

class Lead{
    cursados: Cursado
    nombre
    apellido
    email
    direccion
    telefono
}

class Cursado{
    promedio
    fechaInicio
    fechaFin
    detalle: DetalleCursado
    carrera: Carrera
}

class DetalleCursado{
    estado: Estado
    materias: Materia
    horasTotalesDeCursado
    vecesCursada
}

class Materia{
    nombre
    descripcion
}

class Carrera{
    nombre
    materias: Materia
}

class Estado{
    nombre
}

@enduml